--- a/em/example.html
+++ b/em/example.html
@@ -54,8 +54,8 @@ function onRun() {
 	 </script>
   </head>
   <body onload="onStart();">
-    <textarea id="input" style="width:640;height:280"></textarea>
-	<button id="run" style="width:640;" onclick="onRun()">Run</button>
-    <textarea id="output" style="width:640;height:180"></textarea>
+    <textarea id="input" style="width:640;height:280;display: block"></textarea>
+	<button id="run" style="width:640;display: block" onclick="onRun()">Run</button>
+    <textarea id="output" style="width:640;height:180;display: block"></textarea>
   </body>
 </html>
